syntax = "proto3";

//#options
option java_multiple_files = true;
option java_package = "org.apache.openwhisk.grpc";
option java_outer_classname = "ActivationProto";

package activation;
//#options

//#services
service ActivationService {

    rpc FetchActivation (FetchRequest) returns (FetchResponse) {}

}
//#services

//#messages
// The request message
message FetchRequest {
    string fqn = 1;
    string rev = 2;
}

// The response message
message FetchResponse {
    string activationMessage = 1;
}